# techno

./: .flake8  .gitignore  API.md  CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  coverage-badge.yml  no-publish-guard.yml
cli/: main.py
composition/: phrase.py  section.py  structure.py
core/: frequency.py  primitives.py  synthesis.py  timing.py
generators/: musicgpt_generator.py  synth_generator.py
mixers/: base.py  dub.py  industrial.py  minimal.py
presets/: dub_techno.yaml  minimal_techno.yaml
processing/: distortion.py  dynamics.py  filters.py  spatial.py
scripts/: cleanup_duplicates.sh
src/techno/: __init__.py
src/techno/cli/: main.py
src/techno/composition/: phrase.py  section.py  structure.py
src/techno/core/: frequency.py  primitives.py  synthesis.py  timing.py
src/techno/generators/: musicgpt_generator.py  synth_generator.py
src/techno/mixers/: base.py  dub.py  industrial.py  minimal.py
src/techno/presets/: acid_techno.yaml  industrial_techno.yaml
src/techno/processing/: distortion.py  dynamics.py  filters.py  spatial.py
techno/: __init__.py
tests/: conftest.py  test_cli.py  test_composition.py  test_frequency.py  test_generators.py  test_integration.py  test_listening.py  test_mixers.py  test_negative.py  test_processing.py  test_synthesis.py  test_timing.py
