[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "techno"
version = "0.1.0"
description = "A comprehensive techno music generation system"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Techno Generator Team"},
]
keywords = ["music", "generation", "techno", "audio", "synthesis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "click>=8.0.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pydub>=0.25.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "coverage>=7.0.0",
    "types-PyYAML>=6.0",
    "black==25.9.0",
    "isort==7.0.0",
    "flake8==7.3.0",
    "mypy==1.18.2",
    "typing-extensions>=4.0.0",
]

[project.scripts]
techno = "techno.cli.main:main"

# THIS IS THE KEY - Correct Hatchling config for src/ layout
[tool.hatch.build.targets.wheel]
packages = ["src/techno"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=techno --cov-report=term-missing --cov-report=html"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/techno"]
omit = ["*/tests/*", "*/test_*", "*/conftest.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
mypy_path = "src"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.black]
line-length = 127

[tool.flake8]
exclude = [".venv", "__pycache__", "build", "dist"]
max-line-length = 127
extend-ignore = ["E203", "W503"]
